Local get requests FINALLY work

--- a/whist-app/src/app/games/simple/simpleboard/simpleboard.component.css
+++ b/whist-app/src/app/games/simple/simpleboard/simpleboard.component.css
@@ -16,6 +16,12 @@ table {
   border-spacing: 0;
 }
 
+
+thead {
+  font-size: 14px;
+  font-weight: 600;
+}
+
 td {
   padding: 5px;
   text-align: center;
