--- a/whist-app/src/app/loading/loading.component.css
+++ b/whist-app/src/app/loading/loading.component.css
@@ -2,6 +2,7 @@ section {
   height: 100vh;
   width: 100vw;
   display: flex;
+  background-color: white;
   justify-content: center;
   align-items: center;
 }
