--- a/whist-app/src/app/menu/menu.component.css
+++ b/whist-app/src/app/menu/menu.component.css
@@ -14,6 +14,10 @@ article, ul {
   align-items: center;
 }
 
+img {
+  margin-top: 50px;
+}
+
 h1 {
   width: 100%;
   text-align: center;
@@ -34,7 +38,7 @@ li {
   border-radius: 25px;
   margin: 10px;
   text-transform: uppercase;
-  color: #ff0054;
+  color: #ec008b;
   font-weight: 600;
   border: 2px dotted #ec008b;
   transition: .2s ease;
@@ -50,4 +54,52 @@ li:hover {
   cursor: default;
   color: #676767;
   border: 2px dotted #676767;
+}
+
+a {
+  margin-top: 30px;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+a:hover {
+  color: yellow;
+}
+
+.btn.btn-primary {
+  background-color: #ec008b;
+  border-color: #ec008b;
+}
+
+.btn.btn-primary:hover {
+  background-color: black;
+}
+
+.btn.btn-outline {
+  border-color: #ec008b;
+  color: #ec008b;
+}
+
+.btn.btn-outline:hover {
+  background-color: rgba(0, 0, 0, .1);
+}
+
+.btn.btn-link {
+  color: #ec008b;
+}
+
+.add, .remove {
+  width: 30px;
+  height: 30px;
+  line-height: 15px;
+  border-radius: 15px;
+  text-align: center;
+  background-color: #ec008b;
+  font-size: 20px;
+  color: white;
+  border: none;
+}
+
+.add:hover, .remove:hover {
+  background-color: black;
 }
