--- a/whist-app/src/app/menu/menu.component.css
+++ b/whist-app/src/app/menu/menu.component.css
@@ -3,7 +3,8 @@ section {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: black;
+  font-family: 'Exo';
+  /*background-color: black;*/
   color: #ec008b;
 }
 
