--- a/src/app/games/simple/simplemenu/simplemenu.component.html
+++ b/src/app/games/simple/simplemenu/simplemenu.component.html
@@ -3,7 +3,8 @@
     <img (mouseover)="animateImg()" [ngClass]="{animated: isOn, swing: isOn}" src="../../assets/images/whist.svg" />
     <h1>Simple Whist</h1>
     <ul>
-      <li (click)="opened = true" (mouseover)="toggleAnim()" (mouseleave)="toggleAnim()" class="animated" [ngClass]="{rubberBand: isActive, pulse: toggleOn, infinite: toggleOn}">New Game</li>
+      <li (mouseover)="toggleAnim()" (mouseleave)="toggleAnim()" class="animated" [ngClass]="{rubberBand: isActive, pulse: toggleOn, infinite: toggleOn}">New Game</li>
+      <!-- <li (click)="opened = true" (mouseover)="toggleAnim()" (mouseleave)="toggleAnim()" class="animated" [ngClass]="{rubberBand: isActive, pulse: toggleOn, infinite: toggleOn}">New Game</li> -->
       <li class="inactive">Rules</li>
       <li class="inactive">High Scores</li>
     </ul>
